# fcount-rs

./: .gitignore  404.html  Cargo.toml  LICENSE  PERFORMANCE_ISSUE.md  README.md  index.html  mkdocs.yml  pixi.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: benchmark.sh
docs/: examples.md  index.md  installation.md  usage.md
examples/: index.html
installation/: index.html
search/: search_index.json
src/: cli.rs  lib.rs  main.rs
src/alignment/: bai.rs  block_reader.rs  cigar.rs  minimal_parser.rs  mod.rs  paired.rs  reader.rs
src/annotation/: fast_gtf.rs  feature.rs  gtf.rs  index.rs  io.rs  mod.rs
src/counting/: constants.rs  counter.rs  filtering.rs  mod.rs  overlap.rs  sharded_mate_tracker.rs  stats.rs  worker.rs
src/output/: counts.rs  mod.rs  summary.rs
tests/: cli_integration.rs  counting_params.rs
tests/common/: expected.rs  fixtures.rs  mod.rs  runner.rs
tests/fixtures/: across_genes_r1.bam  across_intron_r1.bam  corner-INDEL.bam  corner-JUNC.bam  corner-NH.bam  corner-ONEEND.bam  corner-fractions.bam  expected-LargestOverlap.ora  expected-MinOverlap.ora  intron_between.bam  test-dup.bam  test-junc.bam
usage/: index.html
