[package]
name = "fcount-rs"
version = "0.1.0-alpha.3"
edition = "2024"
authors = ["Jay Hesselberth <jay.hesselberth@gmail.com>"]
description = "Ultrafast feature counting for RNA-seq data"
license = "MIT"
repository = "https://github.com/rnabioco/fcount-rs"
keywords = ["bioinformatics", "rna-seq", "genomics", "feature-counts"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "fcount"
path = "src/main.rs"

[dependencies]
# BAM/SAM parsing (pure Rust)
noodles-bam = "0.87"
noodles-sam = "0.83"
noodles-bgzf = { version = "0.46", features = ["libdeflate"] }
noodles-core = "0.19"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Data structures
rustc-hash = "2.0"
smallvec = "1.13"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12.5"
coitrees = "0.4.0"
memchr = "2.7.6"
indicatif = { version = "0.18.3", features = ["rayon"] }
flate2 = "1.1.5"
dashmap = "6.1.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.1"
